--- a/app/src/main/res/layout/activity_get_employer_list.xml
+++ b/app/src/main/res/layout/activity_get_employer_list.xml
@@ -32,14 +32,15 @@
                 android:id="@+id/toolbar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#246BFD"
+                android:background="#59a3d8"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="@drawable/ic_menu"
-                app:title="DANH SÁCH NHÀ TUYỂN DỤNG" />
+                app:title="DANH SÁCH NHÀ TUYỂN DỤNG"
+                app:titleTextColor="@color/white" />
 
 
             <SearchView
