--- a/app/src/main/res/menu/menu_employer.xml
+++ b/app/src/main/res/menu/menu_employer.xml
@@ -5,19 +5,14 @@
         <item android:title="Menu">
             <menu>
                 <item
-                    android:id="@+id/menu_candidate_tintuyendung"
+                    android:id="@+id/menu_employer_tintuyendung"
                     android:icon="@drawable/ic_tintuyendung_menu"
                     android:title="Tin tuyển dụng" />
 
                 <item
-                    android:id="@+id/menu_candidate_nhatuyendung"
-                    android:icon="@drawable/ic_nhatuyendung_menu"
-                    android:title="Nhà tuyển dụng" />
-
-                <item
-                    android:id="@+id/menu_candidate_history"
+                    android:id="@+id/menu_employer_application"
                     android:icon="@drawable/ic_application_menu"
-                    android:title="Lịch sử ứng tuyển" />
+                    android:title="Hố sơ ứng tuyển" />
             </menu>
         </item>
     </group>
@@ -26,12 +21,12 @@
         <item android:title="Ứng dụng">
             <menu>
                 <item
-                    android:id="@+id/menu_candidate_thongtin"
+                    android:id="@+id/menu_employer_thongtin"
                     android:icon="@drawable/ic_thongtinapp_menu"
                     android:title="Thông tin ứng dụng" />
 
                 <item
-                    android:id="@+id/menu_candidate_hotro"
+                    android:id="@+id/menu_employer_hotro"
                     android:icon="@drawable/ic_hotro_menu"
                     android:title="Hỗ trợ" />
             </menu>
@@ -42,12 +37,12 @@
         <item android:title="Cài đặt">
             <menu>
                 <item
-                    android:id="@+id/menu_candidate_account"
+                    android:id="@+id/menu_employer_account"
                     android:icon="@drawable/ic_account_menu"
                     android:title="Tài khoản" />
 
                 <item
-                    android:id="@+id/menu_candidate_logout"
+                    android:id="@+id/menu_employer_logout"
                     android:icon="@drawable/ic_signout_menu"
                     android:title="Đăng xuất" />
             </menu>
