--- a/app/src/main/res/layout/activity_get_employer_detail.xml
+++ b/app/src/main/res/layout/activity_get_employer_detail.xml
@@ -32,13 +32,14 @@
                 android:id="@+id/toolbar"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#246BFD"
+                android:background="#59a3d8"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="@drawable/ic_menu"
+                app:titleTextColor="@color/white"
                 app:title="THÔNG TIN TÀI KHOẢN" />
 
             <RelativeLayout
