--- a/app/src/main/res/layout/activity_get_recruitment_news_list.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_list.xml
@@ -19,13 +19,13 @@
         app:itemTextColor="#000"
         app:menu="@menu/menu" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--    <ScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="#FFFFFF">
 
             <androidx.appcompat.widget.Toolbar
@@ -63,13 +63,27 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rc_RecruitmentNewsList"
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingLeft="10dp"
+                android:layout_marginTop="124dp"
+                app:layout_constraintTop_toBottomOf="@id/search_view"
+                tools:layout_editor_absoluteX="48dp" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabBtnAddSp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginBottom="10dp"
-                app:layout_constraintTop_toBottomOf="@id/search_view" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_add"
+                android:tint="#fff"
+                android:background="#59a3d8"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+
+<!--    </ScrollView>-->
 
 </androidx.drawerlayout.widget.DrawerLayout>
