--- a/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
@@ -41,7 +41,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/job_companyname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,7 +61,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/job_salary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -81,7 +81,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/job_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/job_expired_at"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -121,14 +121,13 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/job_technical"
+            <Spinner
+                android:id="@+id/spinnerMaster_technical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_strip_round_corner_10"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:enabled="false"
+                android:padding="15dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -141,14 +140,13 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/job_level"
+            <Spinner
+                android:id="@+id/spinnerMaster_level"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_strip_round_corner_10"
-                android:padding="10dp"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
+                android:enabled="false"
+                android:padding="15dp" />
             <!-- Yêu cầu công việc -->
             <TextView
                 android:layout_width="match_parent"
@@ -161,7 +159,7 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
+            <EditText
                 android:id="@+id/job_desription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -170,16 +168,52 @@
                 android:textColor="@color/black"
                 android:textSize="16dp" />
 
-            <!-- Nút ứng tuyển -->
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/apply_button"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:background="@drawable/bg_btn_blue_corner_16"
-                android:text="Tạo đơn ứng tuyển"
-                android:textColor="#fff"
-                android:textSize="16sp" />
+                android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/apply_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/bg_btn_blue_corner_16"
+                    android:text="Tạo đơn ứng tuyển"
+                    android:textColor="#fff"
+                    android:textSize="16sp" />
+
+                <LinearLayout
+                    android:id="@+id/btnEmployer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnUpdate1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="10dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_btn_blue_corner_10"
+                        android:text="Cập nhật"
+                        android:textColor="@color/white"
+                        android:textSize="17dp" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btnShowList"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_btn_blue_corner_10"
+                        android:text="Danh sách "
+                        android:textColor="@color/white"
+                        android:textSize="17dp" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+
         </LinearLayout>
 
     </ScrollView>
