--- a/app/src/main/res/layout/activity_get_recruitment_application_list.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_application_list.xml
@@ -46,6 +46,14 @@
                 android:textSize="20dp"
                 app:layout_constraintTop_toBottomOf="@id/search_view" />
 
+            <ImageView
+                android:id="@+id/imgNotFound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                tools:srcCompat="@drawable/bg_no_item_found"
+                app:layout_constraintTop_toBottomOf="@id/search_view" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvRecruitmentApplication"
                 android:layout_width="match_parent"
