enhance: get & update result application
bonus fix UI

--- a/app/src/main/res/layout/activity_create_recruitment_news.xml
+++ b/app/src/main/res/layout/activity_create_recruitment_news.xml
@@ -178,7 +178,7 @@
                             android:textSize="17dp" />
 
                         <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/btnNopDon"
+                            android:id="@+id/btnDangTin"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
