--- a/app/src/main/res/layout/activity_get_recruitment_application_list.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_application_list.xml
@@ -49,10 +49,10 @@
             <ImageView
                 android:id="@+id/imgNotFound"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="500dp"
                 android:visibility="invisible"
                 tools:srcCompat="@drawable/bg_no_item_found"
-                app:layout_constraintTop_toBottomOf="@id/search_view" />
+                app:layout_constraintTop_toBottomOf="@id/tvJobTittle" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rcvRecruitmentApplication"
