--- a/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
@@ -190,7 +190,7 @@
                     android:orientation="horizontal">
 
                     <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/btnUpdate1"
+                        android:id="@+id/btnUpdate"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="10dp"
