--- a/app/src/main/res/layout/activity_get_recruitment_news_list.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_list.xml
@@ -19,71 +19,73 @@
         app:itemTextColor="#000"
         app:menu="@menu/menu" />
 
-<!--    <ScrollView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent">-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="#59a3d8"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navigationIcon="@drawable/ic_menu"
+            app:title="DANH SÁCH TIN TUYỂN DỤNG"
+            app:titleTextColor="@color/white" />
+
+
+        <SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_search_corner"
+            android:iconifiedByDefault="false"
+            android:queryHint="Tìm kiếm"
+            android:searchIcon="@drawable/ic_search"
+            android:theme="@style/ThemeOverlay.search"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
+        <ImageView
+            android:id="@+id/imgNotFound"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginTop="10dp"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/search_view"
+            tools:srcCompat="@drawable/bg_no_item_found" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rc_RecruitmentNewsList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFFFFF">
+            android:layout_marginTop="124dp"
+            android:paddingLeft="10dp"
+            app:layout_constraintTop_toBottomOf="@id/search_view"
+            tools:layout_editor_absoluteX="48dp" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="#59a3d8"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="?attr/actionBarTheme"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:navigationIcon="@drawable/ic_menu"
-                app:title="DANH SÁCH TIN TUYỂN DỤNG"
-                app:titleTextColor="@color/white" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabBtnAddSp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#59a3d8"
+            android:src="@drawable/ic_add"
+            android:tint="#fff"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-
-            <SearchView
-                android:id="@+id/search_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/bg_search_corner"
-                android:iconifiedByDefault="false"
-                android:queryHint="Tìm kiếm"
-                android:searchIcon="@drawable/ic_search"
-                android:theme="@style/ThemeOverlay.search"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/toolbar" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rc_RecruitmentNewsList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:layout_marginTop="124dp"
-                app:layout_constraintTop_toBottomOf="@id/search_view"
-                tools:layout_editor_absoluteX="48dp" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabBtnAddSp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/ic_add"
-                android:tint="#fff"
-                android:background="#59a3d8"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-<!--    </ScrollView>-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
