--- a/app/src/main/res/layout/activity_sign_up_candidate.xml
+++ b/app/src/main/res/layout/activity_sign_up_candidate.xml
@@ -4,17 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.MainActivity">
+    tools:context=".Activity.SignUpCandidate">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/archivo_bold"
-        android:text="SIGNUP"
+        android:text="đăng ký"
+        android:textAllCaps="true"
         android:textColor="@color/black"
-        android:textSize="55sp"
+        android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,20 +24,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Email"
@@ -49,13 +45,10 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Password"
+            android:hint="Mật khẩu"
             android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
@@ -64,13 +57,10 @@
             android:id="@+id/edtName"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Name"
+            android:hint="Họ và tên"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
@@ -78,10 +68,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="30sp"
-            android:layout_marginVertical="16sp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:orientation="horizontal"
             android:paddingVertical="10sp">
@@ -90,8 +78,8 @@
                 android:id="@+id/genderLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="22dp"
+                android:layout_marginTop="10dp"
                 android:text="Giới tính"
                 android:textColor="@color/black"
                 android:textSize="17dp" />
@@ -104,23 +92,16 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/bg_strip_round"
                 android:padding="5dp" />
-
-
-
-
         </LinearLayout>
 
         <EditText
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Phone"
+            android:hint="Số điện thoại"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
@@ -129,32 +110,23 @@
             android:id="@+id/edtAddress"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Address"
+            android:hint="Địa chỉ"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignupEmployer"
-            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/botron_button"
-            android:text="SignUp"
-            android:textColor="#ffffff"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_btn_blue_corner_16"
+            android:text="Đăng ký"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
