--- a/app/src/main/res/layout/activity_sign_up_employer.xml
+++ b/app/src/main/res/layout/activity_sign_up_employer.xml
@@ -11,11 +11,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="80dp"
         android:fontFamily="@font/archivo_bold"
-        android:text="SIGNUP"
+        android:text="Đăng ký"
+        android:textAllCaps="true"
         android:textColor="@color/black"
-        android:textSize="55sp"
+        android:textSize="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,20 +25,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:padding="15dp"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
             android:hint="Email"
@@ -49,13 +45,10 @@
             android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Password"
+            android:hint="Mật khẩu"
             android:inputType="textPassword"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
@@ -64,13 +57,10 @@
             android:id="@+id/edtCompanyname"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Company name"
+            android:hint="Công ty"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
@@ -79,14 +69,10 @@
             android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Phone"
-            android:inputType="textPersonName"
+            android:hint="Số điện thoại"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
@@ -94,31 +80,23 @@
             android:id="@+id/edtAddress"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/edittext_background"
             android:ems="10"
-            android:hint="Address"
+            android:hint="Địa chỉ"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
             android:textColorHint="#464646" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSignupEmployer"
-            style="@android:style/Widget.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/botron_button"
-            android:text="SignUp"
-            android:textColor="#ffffff"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="15dp"
+            android:background="@drawable/bg_btn_blue_corner_16"
+            android:text="đăng ký"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="20dp" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
