update get recruitment news detail

--- a/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
+++ b/app/src/main/res/layout/activity_get_recruitment_news_detail.xml
@@ -121,13 +121,27 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerMaster_technical"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_strip_round_corner_10"
-                android:enabled="false"
-                android:padding="15dp" />
+                android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/spinnerMaster_technical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_strip_round_corner_10"
+                    android:padding="15dp" />
+
+                <EditText
+                    android:id="@+id/master_technical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_strip_round_corner_10"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16dp" />
+
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="match_parent"
@@ -140,13 +154,29 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinnerMaster_level"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_strip_round_corner_10"
-                android:enabled="false"
-                android:padding="15dp" />
+                android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/spinnerMaster_level"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_strip_round_corner_10"
+                    android:enabled="false"
+                    android:padding="15dp" />
+
+                <EditText
+                    android:id="@+id/master_level"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_strip_round_corner_10"
+                    android:padding="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16dp" />
+
+            </RelativeLayout>
+
             <!-- Yêu cầu công việc -->
             <TextView
                 android:layout_width="match_parent"
