--- a/app/src/main/res/layout/activity_get_candidate_info_detail.xml
+++ b/app/src/main/res/layout/activity_get_candidate_info_detail.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".Activity.GetRecruitmentNewsList"
-    tools:openDrawer="">
+    tools:openDrawer="start">
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
