--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -47,12 +47,12 @@
         <item android:title="Cài đặt">
             <menu>
                 <item
-                    android:id="@+id/menu_candidate_account"
+                    android:id="@+id/menu_account_infor"
                     android:icon="@drawable/menu_account_infor"
                     android:title="Tài khoản" />
 
                 <item
-                    android:id="@+id/menu_candidate_logout"
+                    android:id="@+id/menu_sign_out"
                     android:icon="@drawable/menu_sign_out"
                     android:title="Đăng xuất" />
             </menu>
