--- a/app/src/main/res/layout/activity_sign_up_candidate.xml
+++ b/app/src/main/res/layout/activity_sign_up_candidate.xml
@@ -119,7 +119,7 @@
             android:textColorHint="#464646" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnSignupEmployer"
+            android:id="@+id/btnSignupCandidate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
